# Nebula.API/Controllers/FileResourceController.cs
@@ -19,46 +19,6 @@ namespace Nebula.API.Controllers
         {
         }
 
-        [HttpPost("FileResource/CkEditorUpload")]
-        [AdminFeature]
-        public async Task<ActionResult<object>> CkEditorUpload()
-        {
-            byte[] bytes;
-
-
-            using (var ms = new MemoryStream(2048))
-            {
-                await Request.Body.CopyToAsync(ms);
-                bytes = ms.ToArray();
-            }
-
-            var userDto = UserContext.GetUserFromHttpContext(_dbContext, HttpContext);
-            var queryCollection = Request.Query;
-
-            var fileResourceMimeType = FileResourceMimeType.GetFileResourceMimeTypeByContentTypeName(_dbContext,
-                queryCollection["mimeType"].ToString());
-
-            var clientFilename = queryCollection["clientFilename"].ToString();
-            var extension = clientFilename.Split('.').Last();
-            var fileResourceGuid = Guid.NewGuid();
-            var fileResource = new FileResource
-            {
-                CreateDate = DateTime.Now,
-                CreateUserID = userDto.UserID,
-                FileResourceData = bytes,
-                FileResourceGUID = fileResourceGuid,
-                FileResourceMimeTypeID = fileResourceMimeType.FileResourceMimeTypeID,
-                OriginalBaseFilename = clientFilename,
-                OriginalFileExtension = extension,
-            };
-
-            _dbContext.FileResources.Add(fileResource);
-            _dbContext.SaveChanges();
-
-            return Ok(new { imageUrl = $"/FileResource/{fileResourceGuid}" });
-        }
-
-
         [HttpGet("FileResource/{fileResourceGuidAsString}")]
         public ActionResult DisplayResource(string fileResourceGuidAsString)
         {
