# Nebula.API/swagger.json
@@ -653,18 +653,6 @@
         }
       }
     },
-    "/FileResource/CkEditorUpload": {
-      "post": {
-        "tags": [
-          "FileResource"
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
     "/FileResource/{fileResourceGuidAsString}": {
       "get": {
         "tags": [
